--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.12.0",
     "@radix-ui/react-progress": "^1.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
