--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.1",
-    "@tsparticles/react": "^3.0.0",   
-    "@tsparticles/engine": "^3.8.1",  
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lenis": "^1.1.18",
     "lucide-react": "^0.469.0",
-    "next": "15.4.2", 
-    "nodemailer": "^6.9.16",
-    "react": "^19.0.0", 
-    "react-dom": "^19.0.0", 
+    "next": "15.4.10",
+    "nodemailer": "^7.0.11",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.5"
@@ -31,10 +31,10 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.31.0", 
-    "eslint-config-next": "15.4.2", 
-    "postcss": "^8.5.6", 
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.10",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.8.3" 
+    "typescript": "^5.8.3"
   }
 }
