--- a/package.json
+++ b/package.json
@@ -2,39 +2,41 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@radix-ui/react-progress": "^1.1.1",
-    "@tsparticles/engine": "^3.8.1",
-    "@tsparticles/react": "^3.0.0",
-    "@vercel/analytics": "^1.4.1",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@tailwindcss/postcss": "^4.2.1",
+    "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
-    "lenis": "^1.1.18",
-    "lucide-react": "^0.469.0",
-    "next": "15.4.10",
-    "nodemailer": "^7.0.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
+    "framer-motion": "^12.34.3",
+    "lenis": "^1.3.17",
+    "lucide-react": "^0.575.0",
+    "next": "16.1.6",
+    "nodemailer": "^8.0.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.17",
+    "@types/node": "^25",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.31.0",
-    "eslint-config-next": "^15.4.10",
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.8.3"
+    "tailwindcss": "^4.2.1",
+    "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
